--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "cors": "^2.7.1",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "http": "0.0.0",
+    "socket.io": "^1.4.6"
   }
 }
